Bug 1513232 - Avoid clamping the layout viewport size to be larger than the display size. r=kats, a=RyanVM

The clamping is intended to be a safeguard against extreme values in the
meta viewport tag. If the layout viewport is sized to the display size,
avoid the clamping, since the display size could legitimately be small
(e.g. in Android 8's picture-in-picture mode).

Differential Revision: https://phabricator.services.mozilla.com/D15605

--HG--
extra : source : 4f844b2ebd4fc15c3d9ebe688e96d109e019cb7f